[package]
name = "xdp-csum-rs-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp-csum-rs-common = { path = "../xdp-csum-rs-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-csum-rs"
path = "src/main.rs"
